[package]
name = "minecraft_conduit"
version = "0.1.0"
edition = "2024"
authors = ["SirCesarium <contact.cesarmarcano@gmail.com>"]
description = "Minecraft Server Manager"
repository = "https://github.com/SirCesarium/minecraft-conduit"
homepage = "https://github.com/SirCesarium/minecraft-conduit"
license = "MIT"

[lib]
name = "conduit"

[[bin]]
name = "conduit"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:miette", "dep:owo-colors", "dep:inquire", "dep:indicatif"]

[dependencies]
clap = { version = "4.6", optional = true, default-features = false, features = ["std", "color", "derive", "help", "usage", "error-context", "suggestions"] }
enderpearl = { version = "2.0", default-features = false }
indicatif = { version = "0.18", optional = true, default-features = false }
inquire = { version = "0.9", optional = true, default-features = false, features = ["crossterm"] }
miette = { version = "7.6", optional = true, features = ["fancy"] }
minecraft_registry_api = { version = "1.4.2", default-features = false, features = ["mojang", "modrinth", "neoforge", "fabric", "forge", "paper", "purpur"] }
modcrawl = { version = "0.5", default-features = false }
owo-colors = { version = "4", optional = true }
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1", default-features = false, features = ["derive"] }
sha1 = { version = "0.11", default-features = false }
sha2 = { version = "0.11", default-features = false }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "2.0", features = ["std"] }
tokio = { version = "1.52", default-features = false, features = ["rt", "rt-multi-thread", "macros", "process", "fs", "io-util", "sync"] }
toml = { version = "1.1", default-features = false, features = ["parse", "display"] }
zipcrawl = { version = "2.4", default-features = false, features = ["compress", "serde"] }
uuid = { version = "1.23.3", features = ["v4", "serde"] }
futures = "0.3"
strum = { version = "0.28.0", features = ["derive"] }

[package.metadata.deb]
maintainer = "SirCesarium"
section = "net"
priority = "optional"
assets = [
    ["target/release/conduit", "usr/bin/", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/conduit", dest = "/usr/bin/conduit", mode = "755" },
]

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
absolute_paths = "deny"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
